--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                     </div>
                     <div class="carousel-item " style="padding-top: 70px; padding-bottom: 40px;">
                         <div class="row centerJ">
-                            <img class="reviewImgJ" src="./assets/" alt="">
+                            <img class="reviewImgJ" src="./assets/Ellipse 2.png" alt="">
                         </div>
                         <div class="row centerJ" style="padding-top: 15px; padding-bottom: 15px;">
                             <img class="starJ" src="./assets/Star.png" alt="">
@@ -706,20 +706,14 @@
                         <div class="row">
                             <p class="txtCenterJ sansCollectionJ lineHeight30"
                                 style="padding-left: 21vw; padding-right: 21vw;">
-                                The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
-                                compared to other restaurants but are packed with sooo much flavor. I usually go for the
-                                #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
-                                than some shops that specialize in boba drinks. It's always chewy and sweet. This place
-                                is cash only and I've seen the same lady at the front register for years now. She's
-                                sweet and I could tell she is a hard worker. Always gotta support this place when I have
-                                a craving for it!!
+                                Their sandwiches are really good and I usually grasp towards their grilled pork banh mi. Their milk tea is also one of my favorites and they are literally the sweetest owners. I'll admit I'm a softie for families who own businesses but they really do work hard and I hope they are living happily.
                             </p>
                         </div>
                         <div class="row centerJ">
                             <img class="quotesJ" src="./assets/Quotes.png" alt="">
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ croissantMarginJ" style="font-size: 20px; font-weight: 600;">Tina T</p>
+                            <p class="txtCenterJ croissantMarginJ" style="font-size: 20px; font-weight: 600;">Kaylia V.</p>
                         </div>
                         <div class="row">
                             <p class="txtCenterJ" style="font-size: 15px; opacity: 66%;">Customer</p>
@@ -732,7 +726,7 @@
                     </div>
                     <div class="carousel-item" style="padding-top: 70px; padding-bottom: 40px;">
                         <div class="row centerJ">
-                            <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                            <img class="reviewImgJ" src="./assets/Ellipse 3.png" alt="">
                         </div>
                         <div class="row centerJ" style="padding-top: 15px; padding-bottom: 15px;">
                             <img class="starJ" src="./assets/Star.png" alt="">
@@ -744,20 +738,14 @@
                         <div class="row">
                             <p class="txtCenterJ sansCollectionJ lineHeight30"
                                 style="padding-left: 21vw; padding-right: 21vw;">
-                                The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
-                                compared to other restaurants but are packed with sooo much flavor. I usually go for the
-                                #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
-                                than some shops that specialize in boba drinks. It's always chewy and sweet. This place
-                                is cash only and I've seen the same lady at the front register for years now. She's
-                                sweet and I could tell she is a hard worker. Always gotta support this place when I have
-                                a craving for it!!
+                                I live in LA so I've tried a lot of different banh mi places but this is hands down my favorite. The filling is the same as other places but the bread here is crunchy because it's toasted so it's nice and warm but the veggies inside are still cool/room temperature. Also, there is not a lot of bread as in its mostly the outside of the baguette if that makes sense. This place is cash only so just a heads up!Tip: try the grilled pork and BBQ pork banh mi with jalapeños, you will not regret. The mango smoothie and lychee smoothie are also delicious.
                             </p>
                         </div>
                         <div class="row centerJ">
                             <img class="quotesJ" src="./assets/Quotes.png" alt="">
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ croissantMarginJ" style="font-size: 20px; font-weight: 600;">Tina T</p>
+                            <p class="txtCenterJ croissantMarginJ" style="font-size: 20px; font-weight: 600;">Elaine H.</p>
                         </div>
                         <div class="row">
                             <p class="txtCenterJ" style="font-size: 15px; opacity: 66%;">Customer</p>
