--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -58,7 +58,7 @@
                                 </div>
 
                                 <div class="col-1 centerJ disappearJ">
-                                    <a href="./index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
+                                    <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
                                             alt="Picture of Logo"></a>
                                 </div>
                                 <div class="col yugiJ alignCenterJ disappearJ">
