--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -198,7 +198,7 @@
                     </div>
 
                     <div class="centerJ">
-                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ">(209) 475-0652</a>
+                        <a href="https://www.google.com/search?sca_esv=582762357&rlz=1C1VDKB_enUS1073US1073&sxsrf=AM9HkKlvEd2L7n7gNSErQJ3ITNRj3shK7w:1700083250127&q=Best+Sandwiches+%26+Smoothies&ludocid=1138117235655603948&lsig=AB86z5WDkn4zehknW-hy5JgHSHrJ&sa=X&ved=2ahUKEwidkNnR98aCAxXxH0QIHZeyDqsQhecIegQIQxAN&cshid=1700083387347635&biw=1920&bih=1043#" target="_blank" class="card-text txtCenterJ sansCollectionJ blueJ">(209) 475-0652</a>
                     </div>
 
                 </div>
@@ -270,10 +270,10 @@
                             </div>
                             <div class="row">
                                 <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-                                    <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                                    <img class="img-fluid" src="../assets/FACEBOOK.png" target="_blank" alt="">
                                 </a>
                                 <a class="footerIconsJ"
-                                    href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                                    href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
                                     <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
                                 </a>
                                 <a class="footerIconsJ" href="../index.html">
@@ -300,11 +300,10 @@
                 <div class="col">
                     <div class="row rightJ">
                         <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-                            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                            <img class="img-fluid" src="../assets/FACEBOOK.png" target="_blank" alt="">
                         </a>
-                        <a class="footerIconsMobileJ"
-                            href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
-                            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                        <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
+                            <img class="img-fluid" src="../assets/icons8-yelp-100.png" target="_blank" alt="">
                         </a>
                         <a class="footerIconsMobileJ" href="../index.html">
                             <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
