--- a/index.html
+++ b/index.html
@@ -810,11 +810,11 @@
                                 <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
                             </div>
                             <div class="row">
-                                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516" target="_blank">
                                     <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
                                 </a>
                                 <a class="footerIconsJ"
-                                    href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                                    href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
                                     <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
                                 </a>
                                 <a class="footerIconsJ" href="../index.html">
@@ -840,11 +840,11 @@
                 </div>
                 <div class="col">
                     <div class="row rightJ">
-                        <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                        <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516" target="_blank">
                             <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
                         </a>
                         <a class="footerIconsMobileJ"
-                            href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                            href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
                             <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
                         </a>
                         <a class="footerIconsMobileJ" href="../index.html">
