--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -269,7 +269,7 @@
                                 <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
                             </div>
                             <div class="row">
-                                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516" target="_blank">
                                     <img class="img-fluid" src="../assets/FACEBOOK.png" target="_blank" alt="">
                                 </a>
                                 <a class="footerIconsJ"
@@ -299,7 +299,7 @@
                 </div>
                 <div class="col">
                     <div class="row rightJ">
-                        <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                        <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516" target="_blank">
                             <img class="img-fluid" src="../assets/FACEBOOK.png" target="_blank" alt="">
                         </a>
                         <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
