--- a/pages/BanhMi.html
+++ b/pages/BanhMi.html
@@ -48,10 +48,10 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ contactUsNavJ"
-                                            href="./ContactUs.html">Contact Us</a>
                                         <a class="nav-link yellowJ navLinksJ txtCenterJ aboutNavJ" aria-current="page"
                                             href="./AboutUs.html">About Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ contactUsNavJ"
+                                            href="./ContactUs.html">Contact Us</a>
                                         <a class="nav-link yellowJ navLinksJ txtCenterJ banhMiNavJ"
                                             href="./BanhMi.html">Banh Mi?</a>
                                     </div>
@@ -100,92 +100,94 @@
 
     <hr class="yellowJ hrLineJ hrMargin">
 
-        <div class="container-fluid footerPaddingJ disappearJ">
-            <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
-                <div class="col-4" style="padding-left: 3%;">
-                    <div class="row yellowJ abrilFatfaceJ">
-                        <h2 class="footerFontSize3">Best Sandwiches</h2>
-                    </div>
-                    <div class="row yellowJ abrilFatfaceJ">
-                        <h2 class="footerFontSize3">& Smoothies</h2>
-                    </div>
+    <div class="container-fluid footerPaddingJ disappearJ">
+        <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+            <div class="col-4" style="padding-left: 3%;">
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">Best Sandwiches</h2>
                 </div>
-                <div class="col" style="padding-left: 2%;">
-                    <div class="row">
-                        <div class="col">
-                            <div class="row sansCollectionJ">
-                                <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
-                                <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-                                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-                            </div>
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">& Smoothies</h2>
+                </div>
+            </div>
+            <div class="col" style="padding-left: 2%;">
+                <div class="row">
+                    <div class="col">
+                        <div class="row sansCollectionJ">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
                         </div>
+                    </div>
 
-                        <div class="col">
-                            <div class="row sansCollectionJ">
-                                <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-                                <p class="yellowJ footerFontSize">
-                                    <img src="../assets/phone symbol.png" alt="">
-                                    <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
-                                </p>
-                                <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
-                                <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
-                            </div>
+                    <div class="col">
+                        <div class="row sansCollectionJ">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+                            <p class="yellowJ footerFontSize">
+                                <img src="../assets/phone symbol.png" alt="">
+                                <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
+                            </p>
+                            <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
+                            <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
                         </div>
+                    </div>
 
-                        <div class="col">
-                            <div class="row">
-                                <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
-                            </div>
-                            <div class="row">
-                                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516" target="_blank">
-                                    <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
-                                </a>
-                                <a class="footerIconsJ"
-                                    href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
-                                    <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
-                                </a>
-                                <a class="footerIconsJ" href="../index.html">
-                                    <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
-                                </a>
-                            </div>
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+                        </div>
+                        <div class="row">
+                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"
+                                target="_blank">
+                                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                            </a>
+                            <a class="footerIconsJ"
+                                href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
+                                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                            </a>
+                            <a class="footerIconsJ" href="../index.html">
+                                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
-            <div class="row">
-                <div class="col">
-                    <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
-                        <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
-                        <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
-                    </p>
-                    <p class="yellowJ footerFontSize" style="width: 115px;">
-                        3330 E Hammer Ln Ste C Stockton, CA 95212
-                    </p>
+    <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
+        <div class="row">
+            <div class="col">
+                <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
+                    <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+                    <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
+                </p>
+                <p class="yellowJ footerFontSize" style="width: 115px;">
+                    3330 E Hammer Ln Ste C Stockton, CA 95212
+                </p>
+            </div>
+            <div class="col">
+                <div class="row rightJ">
+                    <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516"
+                        target="_blank">
+                        <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                    </a>
+                    <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton"
+                        target="_blank">
+                        <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                    </a>
+                    <a class="footerIconsMobileJ" href="../index.html">
+                        <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                    </a>
                 </div>
-                <div class="col">
-                    <div class="row rightJ">
-                        <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516" target="_blank">
-                            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
-                        </a>
-                        <a class="footerIconsMobileJ"
-                            href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
-                            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
-                        </a>
-                        <a class="footerIconsMobileJ" href="../index.html">
-                            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
-                        </a>
-                    </div>
-                    <div class="row">
-                        <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
-                            Smoothies</p>
-                    </div>
+                <div class="row">
+                    <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
+                        Smoothies</p>
                 </div>
             </div>
         </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
