--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -87,7 +87,7 @@
                 <h2 class="abrilFatfaceJ aLittleAboutJ" style="padding-top: 50px">
                     A Little Bit About Best Sandwiches
                 </h2>
-                <div class="centerJ aLittleAboutJ2Div">
+                <div class="aLittleAboutJ2Div">
                     <p class="sansCollectionJ aLittleAboutJ2">
                         Welcome to Best Sandwiches & Smoothies, where Banh mi is not just a sandwich but a culinary
                         masterpiece that tells the tale of Vietnam's rich flavors. Nestled in the heart of 3330 E Hammer
