--- a/pages/BanhMi.html
+++ b/pages/BanhMi.html
@@ -82,7 +82,7 @@
                 <h2 class="abrilFatfaceJ aLittleAboutJ" style="padding-top: 50px">
                     What’s a Banh Mi?
                 </h2>
-                <div class="aLittleAboutJ2Div centerJ">
+                <div class="aLittleAboutJ2Div">
                     <p class="sansCollectionJ aLittleAboutJ2">
                         You may be wondering what a banh mi is? Well a banh mi is basically
                         a short baguette with a very nice crisp crust and soft texture, but
