--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -198,7 +198,7 @@
                     </div>
 
                     <div class="centerJ">
-                        <a href="https://www.google.com/search?sca_esv=582762357&rlz=1C1VDKB_enUS1073US1073&sxsrf=AM9HkKlvEd2L7n7gNSErQJ3ITNRj3shK7w:1700083250127&q=Best+Sandwiches+%26+Smoothies&ludocid=1138117235655603948&lsig=AB86z5WDkn4zehknW-hy5JgHSHrJ&sa=X&ved=2ahUKEwidkNnR98aCAxXxH0QIHZeyDqsQhecIegQIQxAN&cshid=1700083387347635&biw=1920&bih=1043#" target="_blank" class="card-text txtCenterJ sansCollectionJ blueJ">(209) 475-0652</a>
+                        <a href="https://www.google.com/search?sca_esv=582762357&rlz=1C1VDKB_enUS1073US1073&sxsrf=AM9HkKlvEd2L7n7gNSErQJ3ITNRj3shK7w:1700083250127&q=Best+Sandwiches+%26+Smoothies&ludocid=1138117235655603948&lsig=AB86z5WDkn4zehknW-hy5JgHSHrJ&sa=X&ved=2ahUKEwidkNnR98aCAxXxH0QIHZeyDqsQhecIegQIQxAN&cshid=1700083387347635&biw=1920&bih=1043#" target="_blank" class="card-text txtCenterJ sansCollectionJ blueJ" style="font-size: 32px;">(209) 475-0652</a>
                     </div>
 
                 </div>
@@ -218,7 +218,7 @@
                             order at the register</p>
                     </div>
                     <div class="centerJ">
-                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ2">3330 E Hammer Ln Ste C
+                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ2" style="font-size: 32px;">3330 E Hammer Ln Ste C
                             Stockton, CA 95212</a>
                     </div>
 
