--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -99,7 +99,7 @@
             </div>
             <div class="col">
                 <div class="row contactRowJ">
-                    <img class="phoneJ" src="../assets/Person using phone.png" alt="">
+                    <img class="phoneJ" src="../assets/Person using phone.png" alt="person using a phone over map">
                 </div>
             </div>
         </div>
@@ -256,7 +256,7 @@
                             <div class="row sansCollectionJ">
                                 <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
                                 <p class="yellowJ footerFontSize">
-                                    <img src="../assets/phone symbol.png" alt="">
+                                    <img src="../assets/phone symbol.png" alt="phone icon">
                                     <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
                                 </p>
                                 <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
@@ -270,14 +270,14 @@
                             </div>
                             <div class="row">
                                 <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516" target="_blank">
-                                    <img class="img-fluid" src="../assets/FACEBOOK.png" target="_blank" alt="">
+                                    <img class="img-fluid" src="../assets/FACEBOOK.png" target="_blank" alt="facebook icon">
                                 </a>
                                 <a class="footerIconsJ"
                                     href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
-                                    <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                                    <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="yelp icon">
                                 </a>
                                 <a class="footerIconsJ" href="../index.html">
-                                    <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                                    <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="best sandwich logo">
                                 </a>
                             </div>
                         </div>
@@ -290,7 +290,7 @@
             <div class="row">
                 <div class="col">
                     <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
-                        <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+                        <img class="phoneImageJ" src="../assets/phone symbol.png" alt="phone icon">
                         <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
                     </p>
                     <p class="yellowJ footerFontSize" style="width: 115px;">
@@ -300,13 +300,13 @@
                 <div class="col">
                     <div class="row rightJ">
                         <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516" target="_blank">
-                            <img class="img-fluid" src="../assets/FACEBOOK.png" target="_blank" alt="">
+                            <img class="img-fluid" src="../assets/FACEBOOK.png" target="_blank" alt="facebook icon">
                         </a>
                         <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
-                            <img class="img-fluid" src="../assets/icons8-yelp-100.png" target="_blank" alt="">
+                            <img class="img-fluid" src="../assets/icons8-yelp-100.png" target="_blank" alt="yelp icon">
                         </a>
                         <a class="footerIconsMobileJ" href="../index.html">
-                            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="best sandwich logo">
                         </a>
                     </div>
                     <div class="row">
