--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -87,7 +87,26 @@
                 <h2 class="abrilFatfaceJ aLittleAboutJ" style="padding-top: 50px">
                     A Little Bit About Best Sandwiches
                 </h2>
-                <div class="aLittleAboutJ2Div">
+                <div class="appearJ">
+                    <div class="aLittleAboutJ2Div centerJ">
+                        <p class="sansCollectionJ aLittleAboutJ2">
+                            Welcome to Best Sandwiches & Smoothies, where Banh mi is not just a sandwich but a culinary
+                            masterpiece that tells the tale of Vietnam's rich flavors. Nestled in the heart of 3330 E
+                            Hammer
+                            Ln
+                            Ste C Stockton, CA 95212, our restaurant is a homage to the bustling street food scene of
+                            Hanoi.
+                            At
+                            Best Sandwiches & Smoothies, we take pride in curating an authentic experience, from the
+                            crackling
+                            crust of our freshly baked baguettes to the savory dance of traditional Vietnamese
+                            ingredients
+                            within.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="aLittleAboutJ2Div disappearJ">
                     <p class="sansCollectionJ aLittleAboutJ2">
                         Welcome to Best Sandwiches & Smoothies, where Banh mi is not just a sandwich but a culinary
                         masterpiece that tells the tale of Vietnam's rich flavors. Nestled in the heart of 3330 E Hammer
