--- a/pages/BanhMi.html
+++ b/pages/BanhMi.html
@@ -82,7 +82,21 @@
                 <h2 class="abrilFatfaceJ aLittleAboutJ" style="padding-top: 50px">
                     What’s a Banh Mi?
                 </h2>
-                <div class="aLittleAboutJ2Div">
+
+                <div class="appearJ">
+                    <div class="aLittleAboutJ2Div centerJ">
+                        <p class="sansCollectionJ aLittleAboutJ2">
+                            You may be wondering what a banh mi is? Well a banh mi is basically
+                            a short baguette with a very nice crisp crust and soft texture, but
+                            Vietnamese style. The sandwich is usually split in half and filled
+                            with savory ingredients. A banh mi usually consists of a fusion of
+                            meats and vegetables from native Vietnamese cuisine. For example cha
+                            lua which is Vietnamese sausage, cilantro, cucumber , pickled
+                            carrots, pickled daikon, red chilli and mayonnaise.
+                        </p>
+                    </div>
+                </div>
+                <div class="aLittleAboutJ2Div disappearJ">
                     <p class="sansCollectionJ aLittleAboutJ2">
                         You may be wondering what a banh mi is? Well a banh mi is basically
                         a short baguette with a very nice crisp crust and soft texture, but
