--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -192,13 +192,13 @@
                 <div class="card-body">
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER OVER THE PHONE</h3>
                     <div class="centerJ contactBodyTopPaddingJ">
-                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ center orderTextJ">
+                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ center orderTextJ gray">
                             Interested in showing up and having your order ready for you? Give
                             us a call and give us your order over the phone</p>
                     </div>
 
                     <div class="centerJ">
-                        <a href="https://www.google.com/search?sca_esv=582762357&rlz=1C1VDKB_enUS1073US1073&sxsrf=AM9HkKlvEd2L7n7gNSErQJ3ITNRj3shK7w:1700083250127&q=Best+Sandwiches+%26+Smoothies&ludocid=1138117235655603948&lsig=AB86z5WDkn4zehknW-hy5JgHSHrJ&sa=X&ved=2ahUKEwidkNnR98aCAxXxH0QIHZeyDqsQhecIegQIQxAN&cshid=1700083387347635&biw=1920&bih=1043#" target="_blank" class="card-text txtCenterJ sansCollectionJ blueJ" style="font-size: 32px;">(209) 475-0652</a>
+                        <a href="https://www.google.com/search?sca_esv=582762357&rlz=1C1VDKB_enUS1073US1073&sxsrf=AM9HkKlvEd2L7n7gNSErQJ3ITNRj3shK7w:1700083250127&q=Best+Sandwiches+%26+Smoothies&ludocid=1138117235655603948&lsig=AB86z5WDkn4zehknW-hy5JgHSHrJ&sa=X&ved=2ahUKEwidkNnR98aCAxXxH0QIHZeyDqsQhecIegQIQxAN&cshid=1700083387347635&biw=1920&bih=1043#" target="_blank" class="card-text txtCenterJ sansCollectionJ blueJ">(209) 475-0652</a>
                     </div>
 
                 </div>
@@ -212,13 +212,13 @@
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER IN PERSON</h3>
                     <div class="centerJ">
                         <p
-                            class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ contactBodyTopPaddingJ orderTextJ2">
+                            class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ contactBodyTopPaddingJ orderTextJ2 gray">
                             Are you not in the mood to make a phone call or you aren’t much of
                             an online person? If so, that’s completely fine, feel free to head to our establishment and
                             order at the register</p>
                     </div>
                     <div class="centerJ">
-                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ2" style="font-size: 32px;">3330 E Hammer Ln Ste C
+                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ2">3330 E Hammer Ln Ste C
                             Stockton, CA 95212</a>
                     </div>
 
