--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -183,7 +183,7 @@
 
         <div class="row">
             <div class="headBox">
-                <p>Drinks</p>
+                <p>Menu</p>
             </div>
         </div>
 
